# dlopes_weather_bot

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
rust_lib/open_meteo_wrapper/: Cargo.toml
rust_lib/open_meteo_wrapper/src/: lib.rs
test/: CMakeLists.txt  dlopes_bot.c
